# period-countdown

./: .babelrc  .env_sample  .gitignore  .gitignore~  .gitmodules  LICENSE  README.md  build-client.sh  common.js  package-lock.json  package.json  pm2.yml  server.js  webpack.dev.config.js  webpack.prod.config.js
account/: README.md  package-lock.json  package.json  vue.config.js
account-svelte/: CLAUDE.md  package-lock.json  package.json  svelte.config.js  todo.txt  vite.config.ts
account-svelte/src/: app.css  app.d.ts  common.d.ts
account/public/: index.html
account/src/: App.vue  main.js  router.js  store.js  utils.js
api/: .env_sample  package-lock.json  package.json  pm2.yml  schema.sql  server.js
api-rs/: Cargo.toml
api-rs/migrations/: 001_initial_schema.sql
api-rs/src/: admin_routes.rs  auth.rs  config.rs  database.rs  db.rs  google_auth.rs  main.rs  responses.rs  routes.rs  school_data_loader.rs  themes.rs  types.rs  utils.rs  v4_routes.rs
api/lib/: MySQL.js  helpers.js  responses.js
api/models/: Devices.js  Errors.js  Events.js  Hits.js  Users.js  index.js
api/options/: themes.js
api/routes/: admin.js  api.js  v4.js
api/timing-data/: LexerTools.js  Parser.js  Validator.js  dev.js  index.js  lahs.js  mvhs.js  paly.js
app/: api.js  cache.js  utils.js
app/api/: api.js  bell-data-2.js  bell-data.js  bellData.js  data-layer.js  test.js  timing-data.js  v1-2.js  v1.js
extension/chrome/: manifest.json
extension/firefox/: popup.html
extensions/chrome/: manifest.json  popup.html  webpack.config.js
lib/: cache.js  utils.js
main/: .gitignore  babel.config.js  package-lock.json  package.json  postcss.config.js  webpack.dev.config.js  webpack.prod.config.js
main-svelte/: package-lock.json  package.json  svelte.config.js  vite.config.ts
main-vue/: package-lock.json  package.json
public/: 404.html  extension-connection.html  index.html  manifest.json  test_date.html  webpack.dev.config.js  webpack.prod.config.js
scripts/: build-all.js  build-client.sh  update-extension.sh
(+162 files in other folders)
