[package]
name = "api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0"
axum = "0.7.9"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "json"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
