[package]
name = "api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "2.0"
axum = "0.8"
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.6", features = ["cors", "trace"] }
